--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "angular",
+  "name": "Small Site in Node.js",
   "version": "1.0.0",
-  "description": "angular and node alongside",
+  "description": "small site template: consists of three pages - Home, About Us, Contacts; bootsrap layout",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Evgeni vasilev",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "connect": "^3.4.0",
     "http-server": "^0.8.5",
